--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "empty": "^0.10.1",
     "eslint": "^3.17.1",
     "eslint-config-prettier": "^1.5.0",
+    "eslint-config-react-app": "^0.6.2",
     "eslint-config-standard": "^7.0.1",
     "eslint-config-standard-jsx": "^3.3.0",
     "eslint-config-standard-react": "^4.3.0",
@@ -142,5 +143,19 @@
         }
       ]
     ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "standard",
+      "standard-react",
+      "react-app",
+      "prettier",
+      "prettier/flowtype",
+      "prettier/react"
+    ],
+    "plugins": ["prettier"],
+    "rules": {
+      "prettier/prettier": ["error", {}]
+    }
   }
 }
