--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 
 # flow-typed npm dependencies
-flow-typed/npm
+/flow-typed/npm
 
 # testing
-coverage
+/coverage
 
 # production
-build
+/build
 
 # misc
 .DS_Store
