--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://sylvaindethier.github.io",
   "scripts": {
-    "postinstall": "node ./node_modules/.bin/flow-typed install",
+    "postinstall": "rimraf ./flow-typed/npm && flow-typed install",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
@@ -57,9 +57,6 @@
     "eslint": "^3.17.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-config-react-app": "^0.6.2",
-    "eslint-config-standard": "^7.0.1",
-    "eslint-config-standard-jsx": "^3.3.0",
-    "eslint-config-standard-react": "^4.3.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-flowtype": "^2.30.3",
     "eslint-plugin-import": "^2.2.0",
@@ -79,6 +76,7 @@
     "prettier": "^0.22.0",
     "pushstate-server": "^3.0.0",
     "react-dev-utils": "^0.5.2",
+    "rimraf": "^2.6.1",
     "stats-webpack-plugin": "^0.6.0",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
@@ -144,9 +142,14 @@
       "prettier/flowtype",
       "prettier/react"
     ],
-    "plugins": ["prettier"],
+    "plugins": [
+      "prettier"
+    ],
     "rules": {
-      "prettier/prettier": ["error", {}]
+      "prettier/prettier": [
+        "error",
+        {}
+      ]
     }
   }
 }
