--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://sylvaindethier.github.io",
   "scripts": {
+    "preinstall": "git submodule init && git submodule update",
     "postinstall": "rimraf ./flow-typed/npm && flow-typed install",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
@@ -41,11 +42,9 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-react-app": "^2.2.0",
-    "babel-runtime": "^6.23.0",
+    "babel-preset-react-app": "file:./create-react-app/packages/babel-preset-react-app",
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
@@ -56,7 +55,7 @@
     "empty": "^0.10.1",
     "eslint": "^3.17.1",
     "eslint-config-prettier": "^1.5.0",
-    "eslint-config-react-app": "^0.6.2",
+    "eslint-config-react-app": "file:./create-react-app/packages/eslint-config-react-app",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-flowtype": "^2.30.3",
     "eslint-plugin-import": "^2.2.0",
@@ -75,7 +74,7 @@
     "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
     "pushstate-server": "^3.0.0",
-    "react-dev-utils": "^0.5.2",
+    "react-dev-utils": "file:./create-react-app/packages/react-dev-utils",
     "rimraf": "^2.6.1",
     "stats-webpack-plugin": "^0.6.0",
     "style-loader": "^0.16.0",
