--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "install:submodule": "git submodule init && git submodule update",
     "install:cra": "cd create-react-app && npm install && cd ..",
     "install:flow-typed": "rimraf ./flow-typed/npm && flow-typed install",
-    "preinstall": "npm run install:submodule && npm run install:cra",
     "postinstall": "npm run install:flow-typed",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
@@ -43,7 +42,7 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.0",
+    "babel-loader": "^7.0.0-beta.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-flow": "^6.23.0",
