--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "node scripts/start.js",
     "test": "node scripts/test.js --env=jsdom",
     "build": "node scripts/build.js",
-    "prod": "node scripts/prod.js",
+    "serve": "node scripts/serve.js",
     "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
@@ -75,9 +75,9 @@
     "jest": "^19.0.2",
     "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
-    "pushstate-server": "^3.0.0",
     "react-dev-utils": "file:./create-react-app/packages/react-dev-utils",
     "rimraf": "^2.6.1",
+    "serve": "^5.1.2",
     "stats-webpack-plugin": "^0.6.0",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
