--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "react-dev-utils": "file:./create-react-app/packages/react-dev-utils",
     "rimraf": "^2.6.1",
     "serve": "^5.1.2",
-    "stats-webpack-plugin": "^0.6.0",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-manifest-plugin": "^1.1.0"
   },
